cabal-version:      3.4
name:               machines-png
version:            0
-- synopsis:
-- description:
homepage:           https://oss.xkcd.com/
license:            BSD-3-Clause
license-file:       LICENSE
author:             davean
maintainer:         oss@xkcd.com
-- copyright:
category:           Graphics
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

common deps
    build-depends:
        base    >=4.17 && < 4.19
      , binary ^>= 0.8
      , bytestring ^>= 0.11
      , deepseq
      , int-cast ^>= 0.2
      , JuicyPixels^>= 3.3.8
      , machines ^>= 0.7
      , machines-seekable ^>= 0
      , mtl ^>= 2.3
      , streaming-commons ^>= 0.2
      , vector ^>= 0.13

library
    import:           deps, warnings
    default-language: Haskell2010
    hs-source-dirs:   src
    exposed-modules:
      Data.Machine.Png

test-suite machines-png-test
    import:           deps, warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        deepseq ^>= 1.4
      , hedgehog >= 1.2
      , machines-png
      , tasty >= 1.4
      , tasty-hedgehog ^>= 1.4
      , tasty-hunit ^>= 0.10
      , temporary ^>= 1.3
